@@ -1,7 +1,8 @@
 OpenTK 0.3.2 -> 0.3.3
 + OpenTK.OpenGL.Bind 0.7.5 -> 0.7.5.1 (see Bind changelog for more information)
-+ Added the GLForm class.
-+ Added the GLForm.Lesson01 example.
++ Added the GLForm class which sets the base for cross-platform screen, context and keyboard handling.
++ Can now change between fullscreen and windowed modes.
++ Temporarily removed all examples except for GLSL.Lesson01, which has been updated to use the new GLForm class.
 
 OpenTK 0.3.1 -> 0.3.2
 + OpenTK.OpenGL.Glu: Eliminated the temporary IntPtr variable in the GetString and ErrorString functions.
